@@ -1,3 +1,9 @@
+Sun Sep 03 06:19:27 2000  George Lebl <jirka@5z.com>
+
+	* gen_util/clock.c, gen_util/printer.c:  Fix warnings, mark the
+	  gnome_config_get argument for hourformat for translation, do
+	  some sanity checking and use 12 and 24 instead of 0 and 1.
+
 Fri Jun 09 23:22:29 2000  George Lebl <jirka@5z.com>
 
 	* gen_util/mailcheck.c: null everything on destroy, use 0 for invalid
